<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/action_settings">

    <EditTextPreference
        android:defaultValue=" "
        android:key="@string/settings_search_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_search_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/settings_dark_key"
        android:title="@string/settings_dark_title" />
    <ListPreference
        android:defaultValue="@string/settings_all_label"
        android:entries="@array/settings_news_preference"
        android:entryValues="@array/settings_news_preference"
        android:key="@string/settings_filter_key"
        android:title="@string/settings_filter_label" />
    <Preference
        android:defaultValue="2019-01-01"
        android:key="@string/settings_date_key"
        android:title="@string/settings_date_label" />
    <Preference
        android:title="@string/settings_clear_history"
        android:key="@string/settings_history_key"/>
    <Preference
        android:title="@string/settings_clear_recommendations"
        android:key="@string/settings_recommend_key"/>


</PreferenceScreen>