<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@color/refresh1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recommend"
            android:icon="@color/refresh2"
            android:title="@string/menu_recommend" />
        <item
            android:id="@+id/nav_history"
            android:icon="@color/refresh3"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@color/refresh4"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@color/refresh4"
            android:title="@string/menu_search" />

    </group>

</menu>
